# bin

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-0BSD  README.md  docker-compose.yml
src/: io.rs  main.rs
templates/: 404.html  500.html  base.html  index.html  paste.html
