[package]
name = "bin"
version = "3.0.0"
description = "A fork of bin: A paste bin."
repository = "https://github.com/lionkor/bin"
license = "WTFPL OR 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>", "Lion Kortlepel <development@kortlepel.com>"]
edition = "2024"

[dependencies]
argh = "0.1"
log = "0.4"
pretty_env_logger = "0.5"
bytes = { version = "1.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.9" }
gpw = "0.1"
actix-web = "4.11"
htmlescape = "0.3"
askama = { version = "0.15", features = ["full"] }
bat = "0.26"
syntect = "5.3"
tokio = { version = "1.48", features = ["sync"] }
futures = "0.3"
time = "0.3.44"
sqlite = { version = "0.37.0", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
incremental = false
